--- a/paperclip_core/v2/index.html
+++ b/paperclip_core/v2/index.html
@@ -22,7 +22,7 @@ the <code>#[api_v2_errors]</code> macro.</p>
 </div></div><div class="item-row"><div class="item-left module-item"><a class="attr" href="attr.api_v2_operation.html" title="paperclip_core::v2::api_v2_operation attr">api_v2_operation</a></div><div class="item-right docblock-short"><p>Marker attribute for indicating that a function is an OpenAPI v2 compatible operation.</p>
 </div></div><div class="item-row"><div class="item-left module-item"><a class="attr" href="attr.api_v2_schema_struct.html" title="paperclip_core::v2::api_v2_schema_struct attr">api_v2_schema_struct</a></div><div class="item-right docblock-short"><p>Converts your struct to support deserializing from an OpenAPI v2
 <a href="https://github.com/OAI/OpenAPI-Specification/blob/master/versions/2.0.md#schemaObject">Schema</a>
-object (<a href="https://paperclip.waffles.space/paperclip/v2/">example</a>). This adds the necessary fields (in addition to your own fields) and implements the
+object (<a href="https://paperclip-rs.github.io/paperclip/paperclip/v2/">example</a>). This adds the necessary fields (in addition to your own fields) and implements the
 <code>Schema</code> trait for parsing and codegen.</p>
 </div></div><div class="item-row"><div class="item-left module-item"><a class="attr" href="attr.delete.html" title="paperclip_core::v2::delete attr">delete</a></div><div class="item-right docblock-short"><p>Creates route handler with <code>paperclip::actix::web::Resource</code>.
 In order to control the output type and status codes the return value/response must implement the
