--- a/paperclip_core/v2/schema/trait.Apiv2Operation.html
+++ b/paperclip_core/v2/schema/trait.Apiv2Operation.html
@@ -7,7 +7,7 @@
 }</code></pre></div><details class="rustdoc-toggle top-doc" open><summary class="hideme"><span>Expand description</span></summary><div class="docblock"><p>Represents a OpenAPI v2 operation convertible. This is auto-implemented by
 framework-specific macros:</p>
 <ul>
-<li><a href="https://paperclip.waffles.space/paperclip_actix/attr.api_v2_operation.html"><code>paperclip_actix::api_v2_operation</code></a>.</li>
+<li><a href="https://paperclip-rs.github.io/paperclip/paperclip_actix/attr.api_v2_operation.html"><code>paperclip_actix::api_v2_operation</code></a>.</li>
 </ul>
 <p><strong>NOTE:</strong> The type parameters specified here aren’t used by the trait itself,
 but <em>can</em> be used for constraining stuff in framework-related impls.</p>
