--- a/paperclip_core/v2/schema/trait.Apiv2Schema.html
+++ b/paperclip_core/v2/schema/trait.Apiv2Schema.html
@@ -10,9 +10,9 @@
 }</code></pre></div><details class="rustdoc-toggle top-doc" open><summary class="hideme"><span>Expand description</span></summary><div class="docblock"><p>Represents a OpenAPI v2 schema object convertible. This is auto-implemented by
 framework-specific macros:</p>
 <ul>
-<li><a href="https://paperclip.waffles.space/paperclip_actix/derive.Apiv2Schema.html"><code>Apiv2Schema</code></a>
+<li><a href="https://paperclip-rs.github.io/paperclip/paperclip_actix/derive.Apiv2Schema.html"><code>Apiv2Schema</code></a>
 for schema objects.</li>
-<li><a href="https://paperclip.waffles.space/paperclip_actix/derive.Apiv2Security.html"><code>Apiv2Security</code></a>
+<li><a href="https://paperclip-rs.github.io/paperclip/paperclip_actix/derive.Apiv2Security.html"><code>Apiv2Security</code></a>
 for security scheme objects.</li>
 </ul>
 <p>This is implemented for primitive types by default.</p>
