deploy: 4c1230ce9f790e4b4f3cdb261f53d69f4fde546d

--- a/paperclip/actix/index.html
+++ b/paperclip/actix/index.html
@@ -31,6 +31,9 @@ trait actix_web::Responder.</p>
 </div></div><div class="item-row"><div class="item-left module-item"><a class="attr" href="attr.get.html" title="paperclip::actix::get attr">get</a></div><div class="item-right docblock-short"><p>Creates route handler with <code>paperclip::actix::web::Resource</code>.
 In order to control the output type and status codes the return value/response must implement the
 trait actix_web::Responder.</p>
+</div></div><div class="item-row"><div class="item-left module-item"><a class="attr" href="attr.patch.html" title="paperclip::actix::patch attr">patch</a></div><div class="item-right docblock-short"><p>Creates route handler with <code>paperclip::actix::web::Resource</code>.
+In order to control the output type and status codes the return value/response must implement the
+trait actix_web::Responder.</p>
 </div></div><div class="item-row"><div class="item-left module-item"><a class="attr" href="attr.post.html" title="paperclip::actix::post attr">post</a></div><div class="item-right docblock-short"><p>Creates route handler with <code>paperclip::actix::web::Resource</code>.
 In order to control the output type and status codes the return value/response must implement the
 trait actix_web::Responder.</p>
