--- a/paperclip_core/v2/index.html
+++ b/paperclip_core/v2/index.html
@@ -35,6 +35,9 @@ trait actix_web::Responder.</p>
 </div></div><div class="item-row"><div class="item-left module-item"><a class="attr" href="attr.get.html" title="paperclip_core::v2::get attr">get</a></div><div class="item-right docblock-short"><p>Creates route handler with <code>paperclip::actix::web::Resource</code>.
 In order to control the output type and status codes the return value/response must implement the
 trait actix_web::Responder.</p>
+</div></div><div class="item-row"><div class="item-left module-item"><a class="attr" href="attr.patch.html" title="paperclip_core::v2::patch attr">patch</a></div><div class="item-right docblock-short"><p>Creates route handler with <code>paperclip::actix::web::Resource</code>.
+In order to control the output type and status codes the return value/response must implement the
+trait actix_web::Responder.</p>
 </div></div><div class="item-row"><div class="item-left module-item"><a class="attr" href="attr.post.html" title="paperclip_core::v2::post attr">post</a></div><div class="item-right docblock-short"><p>Creates route handler with <code>paperclip::actix::web::Resource</code>.
 In order to control the output type and status codes the return value/response must implement the
 trait actix_web::Responder.</p>
